--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="design/globe.ico">
+    <link rel="stylesheet" href="src/style.css">
     <title>REST Countries API</title>
 </head>
 <body>
